<resources>
    <string name="app_name">Mapple</string>
    <string name="app_label">Mapple</string>
    <string name="search_hint">Mapple</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_go_to_register">Create an account</string>
    <string name="action_go_to_login">Go to login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome."</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibWFwcGxlMjAyMSIsImEiOiJja3BqcXIzYXEwemRsMnBvODk3ZXdkZ2RjIn0.aV64K8DKV-P6tc-tPJIw5w</string>
    <string-array name="layer_spinner_array">
        <item>Water</item>
        <item>Building</item>
    </string-array>
    <string name="menu_map_style_streets">Streets</string>
    <string name="menu_map_style_dark">Dark</string>
    <string name="menu_map_style_light">Light</string>
    <string name="menu_map_style_outdoors">Outdoors</string>
    <string name="menu_map_style_satellite">Satellite</string>
    <string name="menu_map_style_satellite_streets">Satellite streets</string>
    <string name="move_map_instruction">Move map to place\nmarker at desired location</string>
    <string name="zoom_map_in_and_out_instruction">Zoom in and out to see cluster numbers change</string>
    <string name="tap_on_feature_box_instruction">Tap on bounding box</string>
    <string name="fragment_in_card_below">Map fragment container in card below</string>
    <string name="download_button_text">Download</string>
    <string name="list_button_text">List</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="location_component_fragment_text">User\'s current location on a map fragment</string>
    <string name="new_location">New lat: %1$s New longitude: %2$s</string>
    <string name="settings_dialog_title">Settings</string>
    <string name="settings_dialog_positive_button_text">Save</string>
    <string name="settings_status_toast_settings_saved">Settings saved</string>
    <string name="settings_dialog_negative_button_text">Cancel</string>
    <string name="analytics_opt_out_textview">Opt out of analytics tracking</string>
    <string name="login_or_signup_account_switch_text">Always show account login/creation screen</string>
    <string name="log_out_of_account_button">Log out of Mapbox account</string>
    <string name="log_out_toast_confirm">Successfully logged out</string>
    <string name="basic_offline_deleted_toast">Yosemite offline map deleted</string>
    <string name="draw_marker_options_title">Hello World!</string>
    <string name="draw_marker_options_snippet">Welcome to my marker.</string>
    <string name="directions_activity_toast_message">Route is %1$f meters long.</string>
    <string name="snaking_directions_activity_error">Direction route retrieval failed</string>
    <string name="dialog_title">Name new region</string>
    <string name="dialog_message">Downloads the map region you currently are viewing</string>
    <string name="dialog_positive_button">Download</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_toast">Region name cannot be empty.</string>
    <string name="end_progress_success">Region downloaded successfully.</string>
    <string name="toast_no_regions_yet">You have no regions yet.</string>
    <string name="toast_region_deleted">Region deleted</string>
    <string name="navigate_positive_button">Navigate to</string>
    <string name="navigate_neutral_button_title">Delete</string>
    <string name="navigate_negative_button_title">Cancel</string>
    <string name="navigate_title">List</string>
    <string name="region_name">Region %1$d</string>
    <string name="set_region_name_hint">Enter name</string>
    <string name="simple_offline_end_progress_success">Region downloaded successfully.</string>
    <string name="feature_count_snackbar_feature_size">%1$d features in box</string>
    <string name="query_feature_marker_title">Properties:</string>
    <string name="query_feature_no_properties_found">No feature properties found</string>
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select a location</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>
    <string name="fab_title_hotels">Hotels</string>
    <string name="fab_title_parks">Parks</string>
    <string name="fab_title_attractions">Attractions</string>
    <string name="language_switch_options_menu_language_english">English</string>
    <string name="language_switch_options_menu_language_french">French</string>
    <string name="language_switch_options_menu_language_russian">Russian</string>
    <string name="language_switch_options_menu_language_german">German</string>
    <string name="language_switch_options_menu_language_spanish">Spanish</string>
    <string name="language_switch_options_menu_language_italian">Italian</string>
    <string name="language_switch_options_menu_language_vietnamese">Vietnamese</string>
    <string name="language_switch_options_menu_language_korean">Korean</string>
    <string name="language_switch_options_menu_language_japanese">Japanese</string>
    <string name="language_switch_options_menu_language_simplified_chinese">Simplified Chinese</string>
    <string name="language_switch_options_menu_language_traditional_chinese">Traditional Chinese</string>
    <string name="tap_on_map_instruction">Tap anywhere on the map</string>
    <string name="tap_on_map_for_notification">Tap on map to get a notification with map image</string>
    <string name="san_francisco">San Francisco</string>
    <string name="los_angeles">Los Angeles</string>
    <string name="seattle">Seattle</string>
    <string name="new_orleans">New Orleans</string>
    <string name="chicago">Chicago</string>
    <string name="philadelphia">Philadelphia</string>
    <string name="new_york">New York</string>
    <string name="atlanta">Atlanta</string>
    <string name="portland">Portland</string>
    <string name="denver">Denver</string>
    <string name="minneapolis">Minneapolis</string>
    <string name="miami">Miami</string>
    <string name="extrusions_category">3D Extrusions</string>
    <string name="plugins_category">Plugins</string>
    <string name="tv_create_account_button">Create account</string>
    <string name="tv_sign_in_to_account_button">Sign in</string>
    <string name="landing_cta_tv_text">Create or sign in to your Mapbox account to view the latest Mapbox demos</string>
    <string name="skip_for_now_bottom_button">Skip for now</string>
    <string name="do_not_show_again_button_text">Don\'t ask again</string>
    <string name="whoops_error_dialog_title">Whoops!</string>
    <string name="whoops_error_dialog_message">Looks like something went wrong with the log in process! Please try clearing your browser\'s cache/cookies and then sign back in.</string>
    <string name="whoops_error_dialog_ok_positive_button">OK</string>
    <string name="loading_textview">Loading&#8230;</string>
    <string name="space_station_toast">Zoom in closely on the space station\nto see it moving across the map</string>
    <string name="change_anchor">Change anchor</string>
    <string name="change_intensity">Change intensity</string>
    <string name="no_picture_in_picture_support">This device\'s Android version does not\nsupport picture-in-picture mode</string>
    <string name="retrieval_error_dialog_title">Whoops!</string>
    <string name="retrieval_error_dialog_message">Looks like something went wrong with the log in process! Please try clearing your browser\'s cache/cookies and then sign back in.</string>
    <string name="retrieval_error_dialog_ok_button">OK</string>
    <string name="share_app_subject">Mapbox demo app for Android</string>
    <string name="share_app_text">Hey, check out these great examples showing what can be built using Mapbox:\n
    http://play.google.com/store/apps/details?id=com.mapbox.mapboxandroiddemo</string>
    <string name="share_app_choose_one_instruction">Share the app:</string>
    <string name="click_on_polygon_toast_instruction">Click anywhere within polygon FillLayer</string>
    <string name="click_on_polygon_toast">Clicked on FillLayer</string>
    <string name="rv_card_name">Location #%1$d</string>
    <string name="rv_card_bed_info">This location has %1$d beds</string>
    <string name="toast_instruction">Tap on cards below</string>
    <string name="rv_directions_route_card_name">Restaurant #%1$d</string>
    <string name="rv_directions_route_available_table_info">%1$d tables available</string>
    <string name="only_twelve_stops_allowed">Only 12 stops allowed on route. Press on the map and hold to clear markers.</string>
    <string name="click_instructions">Tap on the map to select a maximum of 12 locations</string>
    <string name="successful_but_no_routes">No routes found for that location</string>
    <string name="null_in_response">%1$s is null.</string>
    <string name="no_success">No routes found, make sure you set the right user and access token</string>
    <string name="no_accelerometer">This device doesn\'t support an accelerometer sensor</string>
    <string name="no_magnetic">This device doesn\'t support a magnetic sensor</string>
    <string name="load_raster_button_text">Load custom raster style</string>
    <string name="load_local_style_button_text">Load local style</string>
    <string name="chinese">Chinese</string>
    <string name="russian">Russian</string>
    <string name="arabic">Arabic</string>
    <string name="change_device_language_instruction">Change the device\'s language to German and then tap this button. Already in German? Try French</string>
    <string name="instruction_description">Tap the buttons above to
        switch the map\'s language.</string>
    <string name="call_error">Oh no! The call to the Directions Matrix API failed</string>
    <string name="miles_distance">%1$s miles</string>
    <string name="click_on_marker_instruction_toast">Click on a bolt marker to get started</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="geocode">Start geocode</string>
    <string name="map_center">Map center</string>
    <string name="no_results">No results</string>
    <string name="choose_city_spinner">Choose city</string>
    <string name="searchbutton">SearchButton</string>
    <string name="settingsbutton">settingsbutton</string>
    <string name="save">Save</string>
    <string name="my_Location">myLocation</string>
    <string name="logoutbutton">LogoutButton</string>
    <string name="preferred_landmark_type">Preferred Landmark Type</string>
    <string name="meausrementsd">Meausrements</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="settings">Settings</string>
    <string name="shopping">Shopping</string>
    <string name="attractions_things_to_do"><![CDATA[Attractions & Things To Do]]></string>
    <string name="restuarants">Restuarants</string>
    <string name="events">Events</string>
    <string name="sports_wellness_health_facility"><![CDATA[Sports, Wellness & Health Facility]]></string>
</resources>