<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:text="@string/sports_wellness_health_facility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton4" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:text="@string/events"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:text="@string/restuarants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:text="@string/attractions_things_to_do"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plt" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:text="@string/shopping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton3" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="242dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="659dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/measurements"
        android:layout_width="211dp"
        android:layout_height="24dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="168dp"
        android:text="@string/meausrementsd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plt"
        android:layout_width="186dp"
        android:layout_height="31dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="480dp"
        android:text="@string/preferred_landmark_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Switch
        android:id="@+id/location"
        android:layout_width="282dp"
        android:layout_height="58dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="180dp"
        android:text="Allow other users to see your location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/savesets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="136dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <CheckBox
        android:id="@+id/cbxMetric"
        android:layout_width="128dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="140dp"
        android:text="@string/metric"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbxImperial"
        android:layout_width="128dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:text="@string/imperial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>