<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".main.MainActivity">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/btnSetting"
            mapbox:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/logoutbutton"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            mapbox:layout_constraintBottom_toTopOf="@+id/btnSearch"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:srcCompat="@android:drawable/ic_menu_mylocation"
            android:contentDescription="@string/my_Location"
            android:focusable="true"
            tools:ignore="HardcodedText" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:clickable="false"
            android:contentDescription="@string/settingsbutton"
            android:rotation="-25"
            android:rotationX="2"
            android:rotationY="2"
            android:src="@android:drawable/ic_menu_manage"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:src="@android:drawable/ic_search_category_default"
            mapbox:layout_constraintBottom_toBottomOf="parent"
            mapbox:layout_constraintEnd_toEndOf="parent"
            android:focusable="true"
            android:contentDescription="@string/searchbutton" />

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            mapbox:mapbox_cameraTargetLat="40.73581"
            mapbox:mapbox_cameraTargetLng="-73.99155"
            mapbox:mapbox_cameraZoom="11" />



</androidx.constraintlayout.widget.ConstraintLayout>